# TaskPilot-Engine

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: dev-automation.yaml  multi-llm.yaml  pipeline.yaml
src/taskpilot/: __init__.py  cli.py
src/taskpilot/core/: __init__.py  models.py  parser.py
src/taskpilot/engine/: __init__.py  scheduler.py
src/taskpilot/ui/: __init__.py  dashboard.py
src/taskpilot/utils/: __init__.py  helpers.py
tests/: test_models.py  test_parser.py  test_scheduler.py
