[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "taskpilot-cli"
version = "1.0.0"
description = "Lightweight Terminal AI Task Orchestration & Execution Engine | 轻量级终端AI任务智能编排与执行引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "orchestration", "pipeline", "cli", "task", "automation", "llm", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Automation",
    "Topic :: System :: Shells",
]

dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
http = ["httpx>=0.25"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.25",
]
all = ["httpx>=0.25"]

[project.scripts]
taskpilot = "taskpilot.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/TaskPilot-CLI"
Repository = "https://github.com/gitstq/TaskPilot-CLI"
Issues = "https://github.com/gitstq/TaskPilot-CLI/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
